dev/teaxr/teaxr1-api/overlays/ingress-teaxrapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-teaxrapi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # kubernetes.io/tls-acme: "true" #Uncomment to trigger certificate generation via this ingress
spec:
  rules:
  - host: "teaxrapi.dev.gmetri.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: service-teaxrapi
            port: 
              name: http
  tls:
  - hosts:
    - "teaxrapi.dev.gmetri.com"
    secretName: tls-wildcard-dev-gmetri-com
